# CV_Queue_Mgmt

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  compare_yolo_models.py  main.py  pyproject.toml  report_visual.py  report_words.py  requirements.txt  run_dashboard.py  visualize_IDEAL.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml
PRPs/: 0_INITIAL.md  1_SPEC.md  2_SPEC.md  PREMISE_ComputerVision.md  SPEC_VIDEO_UPLOAD_DASHBOARD_INTEGRATION.md
PRPs/ai_docs/: build_with_claude_code.md  cc_administration.md  cc_commands.md  cc_common_workflows.md  cc_deployment.md  cc_github_actions.md  cc_hooks.md  cc_mcp.md  cc_memory.md  cc_monitoring.md  cc_overview.md  cc_settings.md  cc_troubleshoot.md
PRPs/scripts/: prp_runner.py
data/: yolo_model_comparison_results.json
data/test_output/: corrected_zone_test_20250729_130010.json  zone_events_20250729_124344.json
examples/: ingestion_log.txt  summary_report_sample.txt
premise_cv_platform/config/: settings.py  zone_config.py
premise_cv_platform/data_ingestion/: process_video.py  video_utils.py
premise_cv_platform/inference/: track_people.py  zone_detector.py
premise_cv_platform/interface/: __init__.py  controls.py  event_visualizer.py  streamlit_dashboard.py  video_processor.py
premise_cv_platform/reporting/: streamlit_dashboard.py
premise_cv_platform/storage/: csv_manager.py  data_schemas.py
premise_cv_platform/utils/: async_processor.py  file_handler.py  logging_config.py
tests/: __init__.py  test_async_processor.py  test_config.py  test_csv_manager.py  test_data_schemas.py  test_file_handler.py  test_zone_detector.py
tests_modular/: README.md  __init__.py  test_01_video_processing.py  test_02_person_tracking.py  test_03_zone_analysis.py  test_04_event_detection.py  test_05_data_export.py
videos/: bank_sample_description.md
